--- a/Aula03_170621/frontend/src/pages/principal/index.css
+++ b/Aula03_170621/frontend/src/pages/principal/index.css
@@ -15,6 +15,16 @@ div.produtos {
     padding: 10px;
     background-color: #ddd;
     margin-bottom: 10px;
+    border-radius: 5px;
+}
+
+div.produtos a {    
+    text-decoration: none;
+    color: #323232;
+}
+
+div.produtos:hover {
+    background-color: #ccc;
 }
 
 .btn-detalhes {
